Added more circuit types
Added several circuit types:
+Equals
+Greater than
+Less than
+Log
+Round
+Floor
+Ceil

*Changed the circuit wrench UI icons for or, min, and max to avoid confusion with the new circuits
*Made linking tool into a tag
-Removed unused brazier code that was a holdover from MC1.12 (shouldn't affect existing worlds)

The large number of files changed is due to renaming several classes